force-app/main/default/objects/BrillioFC__Org_Details__c/BrillioFC__Org_Details__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Org Detail</label>
    <nameField>
        <label>ForceClinic Org Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Org Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>