force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Accessibility_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Accessibility_Job_Status__c</fullName>
    <label>Accessibility Job Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>