force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isFieldPopulationCheckInProcess__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isFieldPopulationCheckInProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFieldPopulationCheckInProcess</label>
    <type>Checkbox</type>
</CustomField>