force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isLayoutPopulated__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isLayoutPopulated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLayoutPopulated</label>
    <type>Checkbox</type>
</CustomField>