force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isMetadataReady__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isMetadataReady__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMetadataReady</label>
    <type>Checkbox</type>
</CustomField>