force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isObjComplexityProcessed__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isObjComplexityProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isObjComplexityProcessed</label>
    <type>Checkbox</type>
</CustomField>