force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isObjectAccessProcessed__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isObjectAccessProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isObjectAccessProcessed</label>
    <type>Checkbox</type>
</CustomField>