force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isPermissionSetProcessed__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isPermissionSetProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPermissionSetProcessed</label>
    <type>Checkbox</type>
</CustomField>