force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isProfileProcessed__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isProfileProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProfileProcessed</label>
    <type>Checkbox</type>
</CustomField>