force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isRoleProcessed__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isRoleProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRoleProcessed</label>
    <type>Checkbox</type>
</CustomField>