force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__isUserProcessed__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isUserProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUserProcessed</label>
    <type>Checkbox</type>
</CustomField>