force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Limits_Check__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Limits_Check__c</fullName>
    <label>Limits Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>