force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__No_of_Active_ValidationRule__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__No_of_Active_ValidationRule__c</fullName>
    <inlineHelpText>This includes Validation Rules from Managed Package as well</inlineHelpText>
    <label>No of Active ValidationRules</label>
    <summarizedField>BrillioFC__Object_Detail__c.BrillioFC__Number_of_Active_Validation_Rules__c</summarizedField>
    <summaryFilterItems>
        <field>BrillioFC__Object_Detail__c.BrillioFC__Number_of_Active_Validation_Rules__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Object_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>