force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__No_of_Email_Alerts_not_refer_in_WF__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__No_of_Email_Alerts_not_refer_in_WF__c</fullName>
    <label>No of Email Alerts not refer in WF</label>
    <summaryFilterItems>
        <field>BrillioFC__Email_Alert__c.BrillioFC__Number_of_WF_Rules__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Email_Alert__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>