force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__No_of_Objects_Layout_more_than_1__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__No_of_Objects_Layout_more_than_1__c</fullName>
    <label>No. of Objects Layout more than 1</label>
    <summaryFilterItems>
        <field>BrillioFC__Object_Detail__c.BrillioFC__Total_Number_of_Layouts__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Object_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>