force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__No_of_Objects_with_Active_WorkFlows__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__No_of_Objects_with_Active_WorkFlows__c</fullName>
    <label>No of Objects with Active WorkFlows</label>
    <summaryFilterItems>
        <field>BrillioFC__Object_Detail__c.BrillioFC__Number_of_Active_WF_Rules__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Object_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>