force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__No_of_Objects_with_Triggers__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__No_of_Objects_with_Triggers__c</fullName>
    <label>No. of Objects with Triggers</label>
    <summaryFilterItems>
        <field>BrillioFC__Object_Detail__c.BrillioFC__NumberofActiveTriggers__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Object_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>