force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__No_of_Unused_Roles__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__No_of_Unused_Roles__c</fullName>
    <label>No of Unused Roles</label>
    <summaryForeignKey>BrillioFC__Unused_Role__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>