force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Active_Triggers__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Active_Triggers__c</fullName>
    <label>Number of Active Triggers</label>
    <summaryFilterItems>
        <field>BrillioFC__Apex_Trigger_Detail__c.BrillioFC__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Apex_Trigger_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>