force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Active_Users__c</fullName>
    <label>Number of Active Users</label>
    <summaryForeignKey>BrillioFC__User_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>