force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Apex_Classes__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Apex_Classes__c</fullName>
    <label>Number of Apex Classes</label>
    <summaryFilterItems>
        <field>BrillioFC__Apex_Class_Detail__c.BrillioFC__isTestClass__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>BrillioFC__Apex_Class_Detail__c.BrillioFC__isPackaged__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Apex_Class_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>