force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Applications__c</fullName>
    <label>Number of Custom Applications</label>
    <summaryFilterItems>
        <field>BrillioFC__Application_Details__c.BrillioFC__isCustom__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Application_Details__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>