force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Custom_Objects__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Custom_Objects__c</fullName>
    <inlineHelpText>This includes object from Managed Package as well.</inlineHelpText>
    <label>Number of Custom Objects</label>
    <summaryFilterItems>
        <field>BrillioFC__Object_Detail__c.BrillioFC__External_Full_API_Name__c</field>
        <operation>contains</operation>
        <value>__c</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Object_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>