force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Custom_Profiles__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Custom_Profiles__c</fullName>
    <label>Number of Custom Profiles</label>
    <summaryFilterItems>
        <field>BrillioFC__Profile_Detail__c.BrillioFC__IsCustom__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Profile_Detail__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>