force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_InActive_Users__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_InActive_Users__c</fullName>
    <label>Number of InActive Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>