force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Installed_Packages__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Installed_Packages__c</fullName>
    <label>Number of Installed Packages</label>
    <summaryForeignKey>BrillioFC__Package_Details__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>