force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Reports__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Reports__c</fullName>
    <label>Number of Reports</label>
    <summaryForeignKey>BrillioFC__Unused_Report__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>