force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_Unused_Dashboards__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Unused_Dashboards__c</fullName>
    <label>Number of Unused Dashboards</label>
    <summaryForeignKey>BrillioFC__Unused_Dashboard__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>