force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__Number_of_VF_Pages__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_VF_Pages__c</fullName>
    <label>Number of VF Pages</label>
    <summaryForeignKey>BrillioFC__Visualforce_Page__c.BrillioFC__Org_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>