force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__ReportAndDashboardTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ReportAndDashboardTimeFrame__c</fullName>
    <label>ReportAndDashboardTimeFrame</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>