force-app/main/default/objects/BrillioFC__Org_Details__c/fields/BrillioFC__User_To_Deliver_Email__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__User_To_Deliver_Email__c</fullName>
    <label>User To Deliver Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>